<resources>
    <string name="Androidupdata">Update Android</string>
    <string name="Coupon">Coupon</string>
    <string name="Input_prompt">Chinese or special characters are not available</string>
    <string name="Locate_errors">Location error, please try again later</string>
    <string name="Please_check_network">Please check network</string>
    <string name="about">About</string>
    <string name="about_bank">About</string>
    <string name="about_bot">About BOT</string>
    <string name="about_museum">About Museum</string>
    <string name="about_us">This is an interface about us</string>
    <string name="about_vip">About VIPs</string>
    <string name="aboutus">About Us</string>
    <string name="activated">activated</string>
    <string name="activation">ACTIVATE</string>
    <string name="activation_fails">Activation fails</string>
    <string name="add_cart">Add to Cart</string>
    <string name="add_guide">One-Key Guide</string>
    <string name="add_navi_point">Add</string>
    <string name="add_yingbin_point">Home</string>
    <string name="address">Address:</string>
    <string name="address_input_string_length_hint">Detailed address length cannot exceed 30 characters</string>
    <string name="age">Age:</string>
    <string name="airport_entertainment_speak_text">Hello, I am handy to offer services for fun, please speak out the what you want me to do: 1. Tell Story; 2. Read; 3. Dance; 4. Sing</string>
    <string name="already_latest_version">This is the latest version</string>
    <string name="android_current_version">Current Android Version:&#160;</string>
    <string name="android_key_manager">Android Button Setting</string>
    <string name="apk_download">Download</string>
    <string name="app_id"></string>
    <string name="app_name">New Retailing</string>
    <string name="app_name_debug">New Retailing d</string>
    <string name="app_name_show">New Retailing s</string>
    <string name="app_name_test">New Retailing t</string>
    <string name="arrive_already_3q">Here we arrive, I am going back work now. Anything else, please do not hesitate to ask me, thank you.</string>
    <string name="arrived"> have arrived</string>
    <string name="ask_problem">Question: [Hotel Introduction]</string>
    <string name="atm">ATM</string>
    <string name="auto_back_prompt">Return to this page automatically after 20 seconds upon entering the settings</string>
    <string name="automatic_charging">Auto Charge:</string>
    <string name="awakening_words_interrupt_conversation">Interrupt through Awakening Words:</string>
    <string name="baby_listen_to">Let\'s Listen!</string>
    <string name="back">Back</string>
    <string name="back_already">I am back now</string>
    <string name="back_continue_shop">Back</string>
    <string name="back_help_find">,I am going back now. Anything else, please feel free to let me know. Thank you!</string>
    <string name="back_welcome_point">Back Home</string>
    <string name="background_music">Background music</string>
    <string name="bank_product_is">Our business line covers the following:</string>
    <string name="blame">Funny</string>
    <string name="box">boxes</string>
    <string name="bus">Bus</string>
    <string name="business_intro">Business introduction</string>
    <string name="business_query">Business Enquiry</string>
    <string name="business_queryj">Business Consulting</string>
    <string name="buy_intent">Skip to checkout</string>
    <string name="buy_product">Buy Now</string>
    <string name="cache_error">Please check if the disk space is enough！</string>
    <string name="calc">&#160;&#160;Checkout</string>
    <string name="call_customer">Calling customer service, please wait</string>
    <string name="can_not_contact_tip">Sorry, could not contact customer service</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_failed">Task cancelled error, please check chassis connect.</string>
    <string name="cancel_order">Cancel</string>
    <string name="cannot_repeat_register">Do no repeat registration</string>
    <string name="cart">Cart</string>
    <string name="charge_administration">Charging</string>
    <string name="charge_residue">Min.Charge Balance:</string>
    <string name="charge_save">The charging Settings information has been saved</string>
    <string name="charge_to_low">Power is too low, I am going back to recharge now!</string>
    <string name="charge_too_ittle">There is no less electricity！</string>
    <string name="charge_too_much">No more electricity！</string>
    <string name="chars">character</string>
    <string name="chat_switch">Chatting:</string>
    <string name="chatview">Human-To-Robot Chat</string>
    <string name="check">Query</string>
    <string name="check_is_it_available_sdcard">Please check if SD card is available</string>
    <string name="check_linux">Please check the chassis</string>
    <string name="check_network_connection">check the network connection</string>
    <string name="check_place_go">Please select a location wherever you want to go on left side of the map, then remark it</string>
    <string name="check_pwd">Please check your passwords</string>
    <string name="check_update">Check Updates</string>
    <string name="choose">Choose</string>
    <string name="choose_bg_music_tips">Choose a background music firstly</string>
    <string name="choose_customer_service_voice">Choose CS Speaker:</string>
    <string name="choose_desc_inrunning_file">Choose the introductive content firstly</string>
    <string name="choose_image_gif">Choose an image or gif firstly</string>
    <string name="choose_tts_voice_speaker">Choose TTS Speaker:</string>
    <string name="circle">loop</string>
    <string name="city">Beijing</string>
    <string name="city_input_string_length_hint">City name length cannot exceed 11 characters</string>
    <string name="clear">Clear</string>
    <string name="clear_location">Clear Location</string>
    <string name="clear_success">Success!</string>
    <string name="click_again">Re-click</string>
    <string name="click_back">Click the screen to return</string>
    <string name="click_buy">Click to Purchase</string>
    <string name="click_to_receive">Click\nGet</string>
    <string name="click_too_more">Click too more, please wait</string>
    <string name="close">Power Off</string>
    <string name="cloth_list">Clothing list</string>
    <string name="color">color</string>
    <string name="color_classification">Color Classification:</string>
    <string name="colse">Close</string>
    <string name="comment_failed">Failed</string>
    <string name="comment_success">Success</string>
    <string name="commnet_hint">It is my pleasure to serve for you, may I have you comment on my service？</string>
    <string name="common_welcome">We are serving you. I can provide you with information consultation, service navigation and other services.</string>
    <string name="commution">In the communication</string>
    <string name="company">Company:</string>
    <string name="company_introduction">Introduction</string>
    <string name="complete">Yes</string>
    <string name="confirm_payment">Confirm</string>
    <string name="connect_customer_failed">Artificial service access failed!</string>
    <string name="connect_failed_tip">Sorry, the connection is broken</string>
    <string name="connect_linux">Connecting to the chassis</string>
    <string name="connect_linux_failed">Connection Status with Linux: Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="connection_failed">Connection failed</string>
    <string name="connection_linux_success">Connection Status with Linux: Connected</string>
    <string name="consultation_activity">Advisory activities</string>
    <string name="consultation_in">Admin Service</string>
    <string name="consultation_service">&#160;&#160;Enquiry Service</string>
    <string name="continue_pay">Proceed to pay</string>
    <string name="copy_image_fail">Copy failed</string>
    <string name="copyright">Suzhou Pangolin Robot Co., Ltd.</string>
    <string name="coupon_use_condition">Used for：All Activities</string>
    <string name="coupon_use_time">Time Duration: From now to Nov. 10, 2017</string>
    <string name="course_education">Course Introduction</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="current_cancel">paused already</string>
    <string name="current_news">Current News:</string>
    <string name="current_pwd">Old Password:</string>
    <string name="current_version">System Edition:</string>
    <string name="customer_service">Help</string>
    <string name="customer_this_way">This way please</string>
    <string name="cyber_bar">Internet Cafe</string>
    <string name="dance">Dancing</string>
    <string name="dance1">Go dancing</string>
    <string name="dance2">Please go dancing</string>
    <string name="dance3">Could you please dance?</string>
    <string name="data_timeout">Data loading timeout, please contact technical support staff…</string>
    <string name="default_answer">Sorry, I don\'t understand.</string>
    <string name="default_answer1">Sorry, I don\'t quite understand what you said.</string>
    <string name="default_answer2">Your question is too esoteric, I still can\'t understand.</string>
    <string name="default_answer3">This question will be answered after I add my knowledge.</string>
    <string name="default_answer4">I don\'t know how to answer your question.</string>
    <string name="default_i18n_greetWords">Hello</string>
    <string name="default_voice">Default Voice</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Delete successful</string>
    <string name="delete_sure">Sure to delete？</string>
    <string name="delic_food">Food</string>
    <string name="destination">Here we arrive. Anything else, please find me in the front desk, thank you.</string>
    <string name="destine">Make Appointment</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_update_app">New version detected, update or not?</string>
    <string name="dialog_update_app_title">System Update</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="discount">Coupon</string>
    <string name="dissatisfied">Unsatisfied</string>
    <string name="distance">Distance:</string>
    <string name="do_not_dance">Stop dancing</string>
    <string name="enter_landing_code">Please enter login password&#160;&#160;</string>
    <string name="enter_pwd">Please enter login password</string>
    <string name="in_unkown_problem_answer_setting">Enter unknow questions setting</string>
    <string name="init_factory">Factory Reset：</string>
    <string name="init_factory_hint">All data shall be cleared after reset and irretrievable, please be cautiously noted!</string>
    <string name="input_address">Please enter the detailed address</string>
    <string name="input_city">Please enter current city</string>
    <string name="land">Login</string>
    <string name="max_price">Highest price</string>
    <string name="min_price">Lowest price</string>
    <string name="nvai_setting">Navigation setting</string>
    <string name="ok">OK</string>
    <string name="permanent_hidden_toolbar_switch_settings">Permanent Hidden Tool</string>
    <string name="price_range">Price range(RMB)</string>
    <string name="recovery">Restore</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="season">season</string>
    <string name="semantics_switch">Semantics:</string>
    <string name="setting_vague_query_percentage">Fuzzy Search(0.7–1.0)</string>
    <string name="settings">Setting</string>
    <string name="sure">Yes</string>
    <string name="your_city">City:</string>
</resources>