<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GlobalChildBackgroundImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_global_title" />

    <LinearLayout
        android:layout_width="1040dp"
        android:layout_height="720dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dm_30dp"
        android:background="@drawable/ic_setting_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/android_key_manager"
            android:textColor="@color/black"
            android:textSize="@dimen/dm_28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/permanent_hidden_toolbar_switch_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/dm_18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/auto_back_prompt"
            android:textColor="@color/black"
            android:textSize="@dimen/dm_18sp" />


        <Button
            android:id="@+id/bt_setting"
            android:layout_width="@dimen/dm_150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dm_20dp"
            android:background="@color/deepskyblue"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/dm_24sp" />

    </LinearLayout>


</LinearLayout>