<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5F5F5"
    android:orientation="vertical"
    android:padding="@dimen/dm_20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_search_text"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_ico" />

        <EditText
            android:id="@+id/et_goos_code"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入商品编码"
            android:singleLine="true"
            android:textColor="#393939"
            android:textColorHint="#adadad"
            android:textCursorDrawable="@drawable/edit_cursor_bg"
            android:textSize="@dimen/dm_19sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/season"
        android:textColor="#393939"
        android:textSize="@dimen/dm_19sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_season"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dm_15dp"
        android:scrollbars="none">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textColor="#393939"
        android:textSize="@dimen/dm_19sp"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dm_15dp"
        android:scrollbars="none"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_range"
        android:textColor="#393939"
        android:textSize="@dimen/dm_19sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dm_15dp"
        android:layout_marginStart="@dimen/dm_100dp"
        android:layout_marginTop="@dimen/dm_15dp">

        <EditText
            android:id="@+id/et_min_price"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/min_price"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            android:textColor="#393939"
            android:textColorHint="#c9c9c9"
            android:theme="@style/myEdit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:text="——"
            android:textCursorDrawable="@drawable/edit_cursor_bg" />

        <EditText
            android:id="@+id/et_max_price"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/max_price"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            android:textColor="#393939"
            android:textColorHint="#c9c9c9"
            android:textCursorDrawable="@drawable/edit_cursor_bg"
            android:theme="@style/myEdit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginEnd="@dimen/dp_40"
            android:background="#D7D3D1"
            android:text="@string/reset"
            android:textColor="#393939"
            android:textSize="@dimen/dm_20sp" />

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/dp_40"
            android:background="#cb987d"
            android:text="@string/sure"
            android:textColor="#ffffff"
            android:textSize="@dimen/dm_20sp" />
    </LinearLayout>

</LinearLayout>