<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GlobalChildBackgroundImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/layout_global_title" />

    <LinearLayout
        android:layout_width="1040dp"
        android:layout_height="720dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="34dp"
        android:background="@drawable/ic_setting_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_navi_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nvai_setting"
            android:textColor="@color/black"
            android:textSize="@dimen/dm_30sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_password"
            style="@style/setting_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dm_20dp"
            android:hint="@string/enter_pwd"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_login"
                style="@style/setting_btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dm_20dp"
                android:stateListAnimator="@anim/button_press"
                android:text="@string/land"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/setting_btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dm_20dp"
                android:stateListAnimator="@anim/button_press"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>