<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GlobalChildBackgroundImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_global_title" />


    <LinearLayout
        android:layout_width="1040dp"
        android:layout_height="720dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="34dp"
        android:background="@drawable/ic_setting_bg"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="@dimen/dm_300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/init_factory"
                android:textSize="26sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_initHint"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_18dp"
            android:background="@drawable/bt_hint"
            android:paddingStart="@dimen/dm_16dp"
            android:paddingTop="@dimen/dm_8dp"
            android:text="@string/init_factory_hint"
            android:textColor="#ec7a00"
            android:textSize="@dimen/dm_18sp" />

        <LinearLayout
            android:id="@+id/ll_container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_18dp">


            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit2_bg"
                android:hint="@string/enter_landing_code"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dm_8dp" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_reset"
            style="@style/setting_btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_80dp"
            android:stateListAnimator="@anim/button_press"
            android:text="@string/recovery"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>